First attempt at fixing tangent lines for spline Assitant

BUG:434803